Finished  with Summary Stats

--- a/app.ipynb
+++ b/app.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -221,25 +221,59 @@
     "df.set_index('Date', inplace=True)\n",
     "df.plot.bar()\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Export file as a CSV, without the Pandas index, but with the header\n",
+    "lyp_df.to_csv(\"Output/Prescipation_data.csv\", index=True, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Prcp\n",
+      "count  364.000000\n",
+      "mean     0.048709\n",
+      "std      0.204930\n",
+      "min      0.000000\n",
+      "25%      0.000000\n",
+      "50%      0.000000\n",
+      "75%      0.020000\n",
+      "max      2.620000\n"
+     ]
+    }
+   ],
    "source": [
-    "#  Use Pandas to calcualte the summary statistics for the precipitation data\n"
+    "#  Use Pandas to calcualte the summary statistics for the precipitation data\n",
+    "desc_lyp = lyp_df.describe()\n",
+    "desc_lyp.to_csv(\"Output/Summary_stats.csv\", index=True, header=True)\n",
+    "print(desc_lyp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9)]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Design a query to show how many stations are available in this dataset?"
+    "# Design a query to show how many stations are available in this dataset?\n",
+    "session.query(func.count(Station.station)).all()"
    ]
   },
   {
